syntax="proto3";
package prt;
import "model.proto";

message QueryRoomListReq {
    int32 Page = 1;
    int32 PageCount = 2;
}

message QueryRoomListResp {
  	int32 Code = 1;
  	repeated RoomInfo RoomList = 2;
}	

message GetInRoomReq {
    int32 ID = 1;
}

message GetInRoomResp {
	int32 Code = 1;
    RoomInfo Room = 2;

}

message EnterReadyReq {
}

message EnterReadyResp {
    int32 Code = 1;
}

